hphp/hack/test/typecheck/test_pocket_universes_syntax_atom.php
<?hh // strict
// Copyright 2019-present Facebook. All Rights Reserved.

final class TestPocketUniversesAtom {
  public static function foo() : void {
    $x = :@foo;
    var_dump($x);
  }
}
